Addクラス を追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="gender_female">女性</string>
     <string name="button_send">\nSend\n</string>
     <string name="title_activity_display">DisplayActivity</string>
+    <string name="title_activity_add">AddActivity</string>
 
 </resources>
