--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="title_activity_add">AddActivity</string>
     <string name="family_tree">家系図を見る</string>
     <string name="add">他の人を追加する</string>
+    <string name="add_s">＋</string>
 </resources>
